# yaec

./: CMakeLists.txt  README.md  sdkconfig.old
.cache/clangd/index/: hello_world_main.c.29538263CCEFDCAC.idx
components/bike_sensors/: CMakeLists.txt  sensors.cpp
components/bike_sensors/include/: sensors.h
components/can_bus_comm/: CMakeLists.txt  can_bus_comm.cpp
components/can_bus_comm/include/: can_bus_comm.h
components/common_interfaces/: CMakeLists.txt
components/common_interfaces/include/: shared_state.h
components/control_logic/: CMakeLists.txt  control_logic.cpp
components/control_logic/include/: control_logic.h
components/ui/: CMakeLists.txt  oled_display.c  ui_task.cpp
components/ui/include/: oled_display.h  ui_task.h
main/: CMakeLists.txt  can_test_rec.cpp  can_test_send.cpp  logic_test.cpp  main_v0.cpp  parrot.cpp  sensors_test.cpp  uitest.cpp
